refactor: removed some more dead code